# example-ddd-blog

./: Cargo.toml  README.md
application/: Cargo.toml
application/src/: main.rs
application/src/dto/: article_dto.rs  author_dto.rs  mod.rs
application/src/services/: mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/entities/: article.rs  author.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/src/repositories/: article_repository.rs  mod.rs  mongo_article_repository.rs
