[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.70"
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
tokio = { version = "1.27.0", features = ["full"]}
warp = "0.3.3"
