[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
domain = { path = "../domain" }
mongodb = { version = "2.4.0" }
serde = "1.0.159"
tokio = "1.27.0"
